--- a/DS_Algo_Cucumber/pom.xml
+++ b/DS_Algo_Cucumber/pom.xml
@@ -177,7 +177,7 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-	<plugin>
+	<!--  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
@@ -187,6 +187,7 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
+       -->
       </plugins>
     </pluginManagement>
   </build>
